{
    "name": "Player Controls",
    "maps": [
        {
            "name": "Movement",
            "id": "c92f8b67-fc07-4919-b308-b535677921c7",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "57394cbe-d2c6-4f24-8ba4-cb849c2b7b1b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "1469c3ca-1d24-4b83-adb9-e4d2cbe79a43",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e0ede891-079b-40d1-92bd-8511209fc182",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0751fcc7-b821-4461-88b6-456e3f18ff0d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "aea4f0fd-8bab-467b-bdd2-e1e787d94283",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "51e02aae-0122-4ec8-b8b2-06c924ec34d1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Combat",
            "id": "10f38a7d-81cc-4676-bdff-62e757d8e141",
            "actions": [
                {
                    "name": "basicAttack",
                    "type": "Button",
                    "id": "76e4874f-46fd-4d35-8bc4-2d243ab7b7b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "483dfea5-0d70-46b2-9be0-d708ce8ce03f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dde62445-262b-45e8-972f-5e76e23089a9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "basicAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5f4cff8-f0be-4104-9f0a-c9dd94a97e3f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}